apps/registry-s3/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry-s3
  namespace: registry-s3
  labels:
    app: docker-registry
    release: s3
  annotations:
    certmanager.k8s.io/cluster-issuer: "internal"
    kubernetes.io/ingress.class: "nginx-internal"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    prometheus.io/probe: "true"
spec:
  rules:
    - host: registry-s3.k8s.grigri
      http:
        paths:
          - path: /
            backend:
              serviceName: docker-registry-s3
              servicePort: 5000
  tls:
    - hosts:
      - registry-s3.k8s.grigri
      secretName: registry-s3-tls
